<resources>
    <string name="app_name">Place2Live</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_post_page_title">Add Post</string>
    <string name="add_post_title_field_hint">Title</string>
    <string name="post_desc_field_hint">Add a description</string>
    <string name="add_location_field_hint">Add location</string>
    <string name="post_btn_text">Post</string>
    <string name="upload_images_text">Upload Images</string>
    <string name="change_password_fragment">Change Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>