<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postTitleTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_post_title_field_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_add_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postTitleInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldForDesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/post_desc_field_hint"
            app:layout_constraintBottom_toTopOf="@id/postLocationTextFieldLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTitleTextFieldLayout">

            <EditText
                android:id="@+id/postDescInputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postLocationTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_location_field_hint"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@id/btn_upload_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForDesc"
            app:startIconDrawable="@drawable/ic_baseline_add_location_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postLocationInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload_images"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postLocationTextFieldLayout"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/upload_images_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postLocationTextFieldLayout" />

        <Button
            android:id="@+id/btn_add_post"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_upload_images"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_background"
            android:text="@string/post_btn_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_images" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="98dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.732"
            app:layout_constraintStart_toEndOf="@+id/btn_upload_images"
            app:layout_constraintTop_toBottomOf="@+id/postLocationTextFieldLayout"
            app:layout_constraintVertical_bias="0.612"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>